enhanced failure mode construct
